cmake_minimum_required(VERSION 3.26)
project(class1hands_onWorksheet C)

set(CMAKE_C_STANDARD 11)

add_executable(class1hands_onWorksheet WS1/main.c
        WS1/lab115.cpp
        WS1/lab116.cpp
        WS1/lab117.cpp
        WS1/lab118.cpp
        WS1/lab119.cpp
        WS1/lab120.cpp
        WS2/lab225.cpp
        WS2/lab229.cpp
        WS2/lab232.cpp
        WS2/lab234.cpp
        WS2/lab322.cpp
        Assignment1/matrixmult.c
)
